# applicationinstallerutility

./: .gitignore  CMakeLists.txt  README.md
files/support_scripts/: find_file_in_archive.sh  pmServicePostInstall.sh.in
src/: ApplicationInstallerErrors.h  Main.cpp.in
